--- a/config-client-uat.yml
+++ b/config-client-uat.yml
@@ -1,3 +1,3 @@
 hello:
-    text: this is a config client uat
-    test: spring cloud config uat
+    text: this is a config client uat1
+    test: spring cloud config uat1
